[package]
name = "concurrency"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
dashmap = "6.1.0"
oneshot = "0.1.11"
rand = "0.9.1"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "net", "fs", "macros", "io-util"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
